--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                 </div>
                 <div class="w-full lg:w-1/2 lg:pl-20">
                     <h1 class=" font-semibold mb-3.5 pt-12">Baca Memorandom terbaru:</h1>
+                    <a href="https://medium.com/@azkannawal/bercermin-5d35eed46e71">
+                        <li
+                            class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
+                            Bercermin</li>
+                    </a>
                     <a href="https://medium.com/@azkannawal/mencuri-2947be41619e">
                         <li
                             class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
@@ -105,11 +110,6 @@
                         <li
                             class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
                             Kembali dengan Maya</li>
-                    </a>
-                    <a href="https://medium.com/@azkannawal/flea-78e85090b1af">
-                        <li
-                            class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
-                            Flea</li>
                     </a>
                 </div>
             </div>
