--- a/memorandom.html
+++ b/memorandom.html
@@ -59,8 +59,10 @@
             <div class="flex flex-wrap">
                 <div class="w-full mb-10 lg:px-4 lg:w-1/3">
                     <a href="https://medium.com/@azkannawal">
-                        <img src="/dist/img/kursi.png" class="rounded shadow-md" alt="">
-                        <h3 class="text-center mt-3 text-lg font-semibold text-prim underline decoration-amber-200 decoration-2">Terbaru dan lainnya</h3>
+                        <img src="/dist/img/brooks.png" class="rounded shadow-md" alt="">
+                        <h3
+                            class="text-center mt-3 text-lg font-semibold text-prim underline decoration-amber-200 decoration-2">
+                            Terbaru dan lainnya</h3>
                         <!-- <p class="text-prim text-center mt-2 text-sm ">April 2, 2023 <span
                                 class="bg-amber-200 px-2 ml-1 rounded-full">3 min read</span></p>
                     </a> -->
@@ -93,7 +95,7 @@
         </div>
     </div>
     <footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
-        <div class="container mx-auto ">
+        <div class="container mx-auto">
             <div class="flex justify-center">
                 <a href="https://www.instagram.com/azkannawal/" target="_blank" class="mr-3 text-zinc-50">
                     <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24"
@@ -112,8 +114,7 @@
                             d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z" />
                     </svg>
                 </a>
-                <a href="https://twitter.com/azkannawal"
-                    target="_blank" class=" text-zinc-50  mr-3">
+                <a href="https://twitter.com/azkannawal" target="_blank" class=" text-zinc-50  mr-3">
                     <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24"
                         xmlns="http://www.w3.org/2000/svg">
                         <title>Twitter</title>
