--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                 </div>
                 <div class="w-full lg:w-1/2 lg:pl-20">
                     <h1 class=" font-semibold mb-3.5 pt-12">Baca Memorandom terbaru:</h1>
+                    <a href="https://medium.com/@azkannawal/kebek-fec4807c6862">
+                        <li
+                            class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
+                            Kebek</li>
+                    </a>
                     <a href="https://medium.com/@azkannawal/bunuh-diri-4dc6484233e6">
                         <li
                             class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
@@ -105,11 +110,6 @@
                         <li
                             class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
                             Kursi</li>
-                    </a>
-                    <a href="https://medium.com/@azkannawal/fenomena-kantong-jebol-b8e899cf09b0">
-                        <li
-                            class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
-                            Fenomena Kantong Jebol</li>
                     </a>
                 </div>
             </div>
