--- a/memorandom.html
+++ b/memorandom.html
@@ -58,8 +58,8 @@
         <div class="container mx-auto px-7 lg:px-32 ">
             <div class="flex flex-wrap">
                 <div class="w-full mb-10 lg:px-4 lg:w-1/3">
-                    <a href="https://medium.com/@azkannawal/kebek-fec4807c6862">
-                        <img src="/dist/img/secondbrain.png" class="rounded shadow-md" alt="">
+                    <a href="https://medium.com/@azkannawal/pun-d467bc998f92">
+                        <img src="/dist/img/dry.png" class="rounded shadow-md" alt="">
                         <h3
                             class="text-center mt-3 text-lg font-semibold text-prim underline decoration-amber-200 decoration-2">
                             Terbaru dan lainnya</h3>
